// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VolunteersCard /> renders correctly with social network links 1`] = `
<DocumentFragment>
  <div
    class="volunteers"
  >
    <img
      alt="Scooby Doo"
      class="volunteersPicture"
      data-nimg="1"
      decoding="async"
      height="70"
      loading="lazy"
      src="/_next/image?url=https%3A%2F%2Fscoobydoo.com%2Fprofile.jpeg&w=256&q=75"
      srcset="/_next/image?url=https%3A%2F%2Fscoobydoo.com%2Fprofile.jpeg&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fscoobydoo.com%2Fprofile.jpeg&w=256&q=75 2x"
      style="color: transparent;"
      width="70"
    />
    <div
      class="volunteersInfo"
    >
      <div>
        <p
          class="text-black text-sm tablet:text-base volunteersInfoName"
          data-testid=""
        >
          Scooby Doo
        </p>
        <p
          class="text-black text-sm tablet:text-base volunteersInfoRole"
          data-testid=""
        >
          Detective
        </p>
      </div>
      <div
        class="volunteersIconContainer"
      >
        <a
          href="https://www.twitter.com/scoobydoo"
          target="_self"
        >
          <img
            alt="Twitter icon"
            data-nimg="1"
            decoding="async"
            height="40"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
            style="color: transparent;"
            width="40"
          />
        </a>
        <a
          href="https://www.linkedin.com/in/scoobydoo_engineer"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt="Linkedin icon"
            data-nimg="1"
            decoding="async"
            height="40"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
            style="color: transparent;"
            width="40"
          />
        </a>
        <a
          href="https://www.instagram.com/scoobydoo_detective"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt="Instagram icon"
            data-nimg="1"
            decoding="async"
            height="40"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
            style="color: transparent;"
            width="40"
          />
        </a>
        <a
          href="https://github.com/scoobydoo"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt="Github icon"
            data-nimg="1"
            decoding="async"
            height="40"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
            style="color: transparent;"
            width="40"
          />
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<VolunteersCard /> renders correctly without social network links 1`] = `
<DocumentFragment>
  <div
    class="volunteers"
  >
    <img
      alt="Scooby Doo"
      class="volunteersPicture"
      data-nimg="1"
      decoding="async"
      height="70"
      loading="lazy"
      src="/_next/image?url=https%3A%2F%2Fscoobydoo.com%2Fprofile.jpeg&w=256&q=75"
      srcset="/_next/image?url=https%3A%2F%2Fscoobydoo.com%2Fprofile.jpeg&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fscoobydoo.com%2Fprofile.jpeg&w=256&q=75 2x"
      style="color: transparent;"
      width="70"
    />
    <div
      class="volunteersInfo"
    >
      <div>
        <p
          class="text-black text-sm tablet:text-base volunteersInfoName"
          data-testid=""
        >
          Scooby Doo
        </p>
        <p
          class="text-black text-sm tablet:text-base volunteersInfoRole"
          data-testid=""
        >
          Detective
        </p>
      </div>
      <div
        class="volunteersIconContainer"
      />
    </div>
  </div>
</DocumentFragment>
`;
